syntax = "proto3";

package pb;

option go_package = "./pb";

// Service untuk transaksi
service TransactionService {
  rpc CreateTransaction (CreateTransactionRequest) returns (TransactionResponse);
  rpc GetTransaction (GetTransactionRequest) returns (TransactionResponse);
}

// Struktur data untuk transaksi
message Transaction {
  uint64 id = 1;
  uint64 user_id = 2;
  uint64 product_id = 3;
  double amount = 4;
  string card_token = 5;
  string status = 6;
}

// Request untuk membuat transaksi
message CreateTransactionRequest {
  uint64 user_id = 1;
  uint64 product_id = 2;
  double amount = 3;
  string card_token = 4;
}

// Request untuk mendapatkan transaksi
message GetTransactionRequest {
  uint64 id = 1;
}

// Response untuk transaksi
message TransactionResponse {
  Transaction transaction = 1;
}
